<resources>
    <string name="app_name">AccountManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_splash">SplashActivity</string>
    <string name="wait">Por favor espere, buscando datos en Servidor Google</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="gender">Genero</string>
    <string name="profile_image">Imagen</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
</resources>
